samples/_failures_safe/1761251716_2e188f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc7339ba.c: In function ‘main’:
./samples/SAFE/__tmp_dc7339ba.c:144:10: error: expected ‘;’ at end of input
  144 |     qsort
      |          ^
      |          ;
./samples/SAFE/__tmp_dc7339ba.c:144:5: error: expected declaration or statement at end of input
  144 |     qsort
      |     ^~~~~
